2007-05-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (spMatrix): utility (T)sparse Matrix constructor;
	* man/spMatrix.Rd: docu., including examples

	* R/Auxiliaries.R (sp.colMeans): etc, using a patched callGeneric(),
	in order to make colMeans() etc fast *and* correct.
	* R/sparseVector.R (replSPvec): "[<-" functionality for
	sparseVectors; tested in
	* tests/simple.R:

2007-05-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (print.sparseSummary): and summary() method for
	(very) sparse Matrices; output similar to Matlab's print().

2007-05-17  Douglas Bates  <bates@stat.wisc.edu>

	* src/HBMM.c (Matrix_writeMatrixMarket): Write 1-based, not
	0-based, indices (Jose Quesada <quesada@gmail.com>).

2007-05-16  Douglas Bates  <bates@stat.wisc.edu>

	* R/CHMfactor.R: Added solve methods for a CHMfactor object.

2007-05-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (sparsapply): new utility, much faster than
	tapply1() for large sparse matrices.

2007-05-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (dim<-): reshape now via sparseVector.

	* R/sparseVector.R: methods and function for
	* R/AllClass.R: new "sparseVector" class and daughters.
	* NAMESPACE: export new classes

2007-05-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.99875-1
	* src/Makefile.win: also remove Lapack code from here (cf. 04-25).

2007-05-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R ([, Tsparse): fix last case: *duplicated*, symmetric
	indexing
	* tests/indexing.R: test set for that.

2007-05-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R (replTmat): fix the case of *duplicated* index
	entries.
	* tests/indexing.R(out): add regression test for it

2007-04-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/(l(dense|sparse))?Matrix.R (!): use 'x', not 'e1' as argument
	name for "!" method definitions.
