@@ -356,8 +356,8 @@ setMethod("summary", signature(object = "sparseMatrix"),
 	      ## return a data frame (int, int,	 {double|logical|...})	:
 	      r <- data.frame(i = T@i + 1L, j = T@j + 1L, x = T@x)
 	      attr(r, "header") <-
-		  sprintf('%d x %d sparse Matrix of class "%s", with entries',
-			  d[1], d[2], class(object))
+		  sprintf('%d x %d sparse Matrix of class "%s", with %d entries',
+			  d[1], d[2], class(object), nnzero(object))
 	      ## use ole' S3 technology for such a simple case
 	      class(r) <- c("sparseSummary", class(r))
 	      r
