@@ -141,3 +141,11 @@ Check for DimNames propagation in coercion and other operations.
 - ! <symmetricMatrix>  loses symmetry, both for dense and sparse matrices.
   !M  where M is "sparseMatrix", currently always gives dense. This only
   makes sense when M is ``really sparse''.
+
+- column names of sparse matrices are not printed.
+  i.  "mention" them at the end of show()
+  ii.  build show( <sparseMatrix>) on a function, possibly
+       print.sparseMatrix(), which gets an argument such as
+       'col.names.show  = FALSE' which is documented and can be set to TRUE
+
+
