@@ -26,8 +26,11 @@ spMatrix(nrow, ncol, i, j, x)
   \code{n = length(i)} and
   \code{M[ i', j' ] == 0} for all other pairs \eqn{(i',j')}.
 }
-\seealso{\code{\link{Matrix}} for the more usual constructor of such
-  matrices; \code{\linkS4class{TsparseMatrix}} and similar class
+\seealso{\code{\link{Matrix}(*, sparse=TRUE)} for the more usual
+  constructor of such matrices; further \code{\link{bdiag}} and
+  \code{\link{Diagonal}} for (block-)diagonal matrix constructors.
+
+  Consider \code{\linkS4class{TsparseMatrix}} and similar class
   definition help files.
 }
 \examples{
